--- a/planner/planner-app/package.json
+++ b/planner/planner-app/package.json
@@ -24,12 +24,12 @@
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "date-fns": "^2.17.0",
     "modals": "^0.1.9",
     "ng2-charts": "^2.4.2",
+    "ngx-bootstrap": "^6.2.0",
     "ngx-simple-calendar": "^1.0.3",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.5.4",
