--- a/planner/planner-api/package.json
+++ b/planner/planner-api/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,5 +16,6 @@
     "express": "^4.17.1",
     "mongoose": "^5.11.17",
     "nodemon": "^2.0.7"
-  }
+  },
+  "type": "module"
 }
