--- a/lista-de-compras/lista-de-compras-app/package.json
+++ b/lista-de-compras/lista-de-compras-app/package.json
@@ -19,7 +19,11 @@
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "bootstrap": "^4.6.0",
+    "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~6.6.0",
+    "toastr": "^2.1.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
